fix(home): stretch large cards to full width on mobile

--- a/src/app/features/home/home.scss
+++ b/src/app/features/home/home.scss
@@ -139,7 +139,7 @@ app-ui-button {
   }
 
 &__list {
-  @include flex(column, flex-start, flex-start, 16px);
+  @include flex(column, stretch, flex-start, 16px);
 
   @include laptop {
     flex-direction: row;
